--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "private": true,
   "dependencies": {
     "body-parser": "^1.18.3",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "postgres-entities": "^1.0.1"
   },
   "scripts": {
     "start": "node service.js",
